<resources>
    <!-- Писать на русском языке в этом файле неправильно, но на первых порах сойдет.-->
    <!-- TODO: перед релизом перенести этот файл в файл русской локализации, а здесь создать английскую локализацию -->
    <string name="app_name">Ингосстрах медицина</string>
    <string name="speciality">Категория</string>

    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>

    <string name="action_settings">Настройки</string>

    <string name="menu_main">Главная</string>
    <string name="menu_clinicls_list">Список клиник</string>
    <string name="menu_history">Медицинская карта</string>
    <string name="menu_registry">Активные записи</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_recipes">Лекарства</string>

    <string name="debug_text">[Дебаг]</string>

    <string name="tab1_text">Список</string>
    <string name="tab2_text">На карте</string>

    <string name="fragment_greetings_base">Это базовый фрагмент!</string>
    <string name="fragment_greetings_main">Это главный экран приложения!</string>
    <string name="fragment_greetings_history">Это экран медицинской карты пользователия с историей посещений!</string>
    <string name="fragment_greetings_settings">Это экран настроек!</string>
    <string name="fragment_greetings_registry">Это экран активных записей!</string>
    <string name="fragment_greetings_list">Это экран доступных клиник!</string>

    <string name="activity_speciality">Это экран всех специальностей врачей!</string>

    <string name="nav_header_usename">Иван Иванов</string>
    <string name="nav_header_number">0000 0000 0000 0000</string>

    <string name="frag_title_main">Ингосстрах</string>
    <string name="frag_title_lk">Личный кабинет</string>
    <string name="frag_title_history">Медицинская карта</string>
    <string name="frag_title_clinics">Список клиник</string>
    <string name="frag_title_registry">Активные записи</string>
    <string name="frag_title_settings">Настройки</string>
    <string name="frag_title_recipes">Лекарства</string>
    <string name="frag_title_spec">Выберите специалиста</string>
    <string name="frag_title_doctor">Выберите врача</string>
    <string name="activity_new_registry">Время записи</string>


    <string name="personal_information">Персональные данные</string>
    <string name="edit_information">Изменение ваших данных и пароля</string>
    <string name="insurance_information">Информация о страховке</string>
    <string name="insurance_information_global">Доступные услуги, сроки окончания…</string>
    <string name="service">Сервисы</string>
    <string name="edit_service">Изменить доступные услуги, продлить полис и т. д.</string>
    <string name="stats">Статистика</string>
    <string name="stats_info">Информация о ваших посещениях клиник</string>
    <string name="EXIT">ВЫЙТИ ИЗ ПРОФИЛЯ</string>

    <string name="recipe_name">Название лекарства</string>
    <string name="recipe_manual">Инструкция по применению</string>
    <string name="title_recipe_add">Добавление лекарства</string>
    <string name="drug_name">Введите название лекарства</string>
    <string name="drug_manual">Введите инструкцию по применению</string>
    <string name="btn_add_recipe">Добавить рецепт</string>

    <string name="doctor_spec">Специалист</string>
    <string name="reception_date">Дата приема</string>

    <string name="full_information_from_mc">Информация о приеме</string>
    <string name="title_report">Жалобы</string>
    <string name="report">Боли в животе</string>
    <string name="past_disease">Перенесенные заболевания</string>
    <string name="diagnosis">Диагноз</string>
    <string name="present_disease">Развитие настоящего заболевания</string>
    <string name="get_recipe">Выписанные лекарства</string>
    <string name="doc_name">Имя врача</string>

    <string name="btn_full_info">Информация о клинике</string>
    <string name="btn_edit_registry">Изменить запись</string>
    <string name="full_information_from_registry">Информация о записи</string>
    <string name="full_information_registry_confirmation">Подтвердите запись</string>

    <string name="btn_register_in_med">ЗАПИСАТЬСЯ НА ПРИЕМ</string>
    <string name="btn_registry_list">К СПИСКУ ЗАПИСЕЙ</string>
    <string name="btn_building_list">К СПИСКУ ЦЕНТРОВ</string>
    <string name="btn_delete_registry">ОТМЕНИТЬ ЗАПИСЬ</string>

    <string name="example_date">12.05.2017</string>
    <string name="example_time">14:30</string>
    <string name="example_phone_number">+7(495)123–45–67</string>
    <string name="example_work_mon">Пн: 8:00–18:00</string>
    <string name="example_work_tue">Вт: 8:00–18:00</string>
    <string name="example_work_wed">Ср: 8:00–18:00</string>
    <string name="example_work_thu">Чт: 8:00–18:00</string>
    <string name="example_work_fri">Пт: 8:00–18:00</string>
    <string name="example_work_sat">Сб: 10:00–16:00</string>
    <string name="example_work_sun">Вс: Выходной</string>
    <string name="example_fio">Иванов Иван Иванович</string>
    <string name="example_adress">ул.Тестовая, д.11/1</string>
    <string name="example_adress_long">г.Москва, ул.Тестовая, д.11, к.1, 109469</string>
    <string name="example_room">403</string>
    <string name="example_rating">4.5/5</string>
    <string name="example_speciality">Окулист</string>

    <string name="info_field_registry_date">Дата приема:</string>
    <string name="info_field_registry_time">Время приема:</string>
    <string name="info_field_phone_number">Телефон:</string>
    <string name="info_field_work_hours">Режим работы:</string>
    <string name="info_field_rating">Рейтинг:</string>
    <string name="info_field_fio">ФИО:</string>
    <string name="info_field_adress">Адрес:</string>
    <string name="info_field_adress_long">Полный адрес:</string>
    <string name="info_field_room">Кабинет:</string>
    <string name="info_field_speciality">Специальность:</string>

    <string name="title_select_activity">Выберите способ записи</string>
    <string name="select_spec">Выбрать специальность</string>
    <string name="select_doctor">Выбрать врача</string>
    <string name="select_clinic">Выбрать клинику рядом</string>

    <string name="title_insurance_services_activity">Услуги по страховке</string>
    <string name="frag_title_available_services">Доступные услуги</string>
    <string name="frag_title_unavailable_services">Недоступные услуги</string>
    <string name="btn_add_service">Подключить услугу</string>
    <string name="builder_content">Вы уверены?</string>
    <string name="builder_yes">Да</string>
    <string name="builder_no">Нет</string>

    <string name="title_personal_data">Персональные данные</string>
    <string name="full_name">Полное имя</string>
    <string name="birthday">Дата рождения</string>
    <string name="insurance_number">Номер страховки</string>
    <string name="job_place">Место работы</string>
    <string name="insurance_end">Срок окончания страховки</string>
    <string name="contact_phone">Контактный телефон</string>
    <string name="title_box">Введите новый номер телефона</string>

    <string name="input_new_password">Введите новый пароль</string>

    <string name="title_stats">Статистика</string>
    <string name="quantity_doctor">Количество обращений к врачу</string>
    <string name="quantily_call_doctor">Количество вызовов врача на дом</string>
    <string name="quantily_call_help">Количество вызовов скорой помощи</string>
    <string name="quantily_duty_doctor">Количество обращений к дежурному врачу</string>
    <string name="quantily_recipes">Количество выписанных рецептов</string>

    <string name="chat_with_doctor">Чат с врачом-куратором</string>
    <string name="send_message">Отправить</string>

    <string name="registry_info_main">Основная информация</string>
    <string name="registry_info_clinic">Медицинский центр</string>
    <string name="registry_info_special">Принимающий специалист</string>

    <string name="doc_education">Образование</string>
    <string name="doc_experience">Опыт работы</string>
    <string name="doc_age">Возраст</string>
    <string name="title_doctor_profile">Информация о враче</string>
    <string name="full_info_from_mc">Подробная информация</string>

    <string name="insurance_date">Истекает через:</string>

    <string name="activity_auth_title">Авторизация</string>
</resources>
