<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/quantity_doctor"
            android:textColor="@color/Black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pager_fragment_global_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/debug_text"
            android:textColor="@color/Black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/quantily_call_doctor"
            android:textColor="@color/Black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/activity_personal_data_text_view_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/debug_text"
            android:textColor="@color/Black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/quantily_call_help"
            android:textColor="@color/Black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/activity_personal_data_text_view_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/debug_text"
            android:textColor="@color/Black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/quantily_duty_doctor"
            android:textColor="@color/Black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/activity_personal_data_text_view_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/debug_text"
            android:textColor="@color/Black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/quantily_recipes"
            android:textColor="@color/Black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/activity_personal_data_text_view_end_insurance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/debug_text"
            android:textColor="@color/Black"/>
    </LinearLayout>

</LinearLayout>